# AttnResVID

./: .gitignore  README.md  data.py  exp.md  preview_nwb.py  pyproject.toml  test_attnres.py
conf/: config.yaml
conf/attnres/: bottleneck.yaml  bottleneck_decoder.yaml  off.yaml  stagewise.yaml
conf/dataset/: default.yaml
conf/network/: default.yaml
conf/pruning/: none.yaml  wanda.yaml
conf/wandb/: off.yaml  on.yaml
conf/worker/: default.yaml
datasets/: nas.txt
results/: EXPERIMENT_REPORT.md
scripts/: generate_synthetic_data.py  inference.py  train.py
source/: callback_collection.py  network_collection.py  nwb_dataset.py  test_baseline_equivalence.py  utils.py  worker_collection.py
source/attnres/: __init__.py  aggregator.py  config.py  control.py  gated_residual.py  history_manager.py  wrapper.py
source/pruning/: __init__.py  wanda.py
