[project]
name = "deepvidv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dandi>=0.74.3",
    "lindi>=0.4.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pynwb>=3.1.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "tifffile>=2026.3.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
